<resources>
    <string name="app_name">108820008_HW6–1</string>
    <string name="chocolate_syrup_text">Chocolate Syrup</string>
    <string name="sprinkles_text">Sprinkles</string>
    <string name="crushed_nuts_text">Crushed Nuts</string>
    <string name="cherries_text">Cherries</string>
    <string name="orio_cookie_crumbles_text">Orio cookie crumbles</string>
    <string name="show_toast_text">Show Toast</string>
</resources>