<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/chocolate_syrup_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_syrup_text" />

    <CheckBox
        android:id="@+id/sprinkles_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinkles_text" />

    <CheckBox
        android:id="@+id/crushed_nuts_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crushed_nuts_text" />

    <CheckBox
        android:id="@+id/cherries_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cherries_text" />

    <CheckBox
        android:id="@+id/orio_cookie_crumbles_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orio_cookie_crumbles_text" />

    <Button
        android:id="@+id/show_toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSubmit"
        android:text="@string/show_toast_text" />

</LinearLayout>